--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="a place to learn CKB from scratch, using no code and no software(just plain web page!)"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/nervos-logo.png" />
     <!--
