--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Learn CKB From 0</title>
   </head>
-  <body>
+  <body spellcheck="false">
     <noscript>You need to enable JavaScript to run this app.</noscript>                                                    
     <div id="root"></div>
     <!--
